--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "bplist-creator": "~0.0.3",
-    "macos-alias": "~0.2.5",
+    "macos-alias": "https://github.com/armortext/node-alias#node-23-patches",
     "tn1150": "^0.1.0"
   },
   "contributors": [
